Fix spacing at the top nav & add light mode to about, conditionally remove toggle btn from block page

--- a/src/components/Layouts/Layout.module.css
+++ b/src/components/Layouts/Layout.module.css
@@ -11,7 +11,7 @@
   background-color: var(--navyblue);
   width: 100%;
   color: #fff;
-  padding: 20px 80px;
+  padding: 71px 80px;
   display: flex;
   justify-content: space-between;
 }
@@ -32,7 +32,7 @@ a {
   font-family: 'Open Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 28px;
 }
 
@@ -63,7 +63,7 @@ a {
 }
 
 .navcontainer ul {
-  width: 30%;
+  width: 35%;
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -318,5 +318,5 @@ a {
 
 .toggle{
   width: 50px;
-  font-size: 32px;
+  font-size: 40px;
 }
